@@ -3,6 +3,7 @@ Changes in version 0.x (2004-xx-xx)
 
 * Added additional DaoAuthenticationProvider event when user not found
 * Added Authentication.getDetails() to DaoAuthenticationProvider response
+* Extracted removeUserFromCache(String) to UserCache interface
 * Fixed EH-CACHE-based caching implementation behaviour when cache exists
 * Fixed Ant "release" target not including project.properties
 * Documentation improvements
